test/should_not_compile/nonfree_tyvar.sml
fun foo (x : 'a) = x + x;
